tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/inline-table/trailing-comma.stderr
TOML parse error at line 3, column 18
  |
3 | abc = { abc = 123, }
  |                  ^
invalid inline table
expected `}`
